# VideoCapturing

./: .gitignore  CMakeLists.txt  README.md  create_mask.cpp  main.cpp  queueTest.cpp
applications/: create_mask.cpp  main.cpp  queueTest.cpp
include/: CircularQueue.h
source/: CircularQueue.cpp
